--- a/master/Cargo.toml
+++ b/master/Cargo.toml
@@ -11,8 +11,9 @@ serde = { version = "1", features = ["derive"] }
 tower-http = { version = "0.5", features = ["fs", "trace"] }
 askama = "0.12"
 askama_axum = "0.4"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde_json = "1"
 bcrypt = "0.15"
 axum-extra = { version = "0.9", features = ["cookie", "cookie-private"] }
 clap = { version = "4.4", features = ["derive"] }
+sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
